# svinst-slang

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  regress.sh
.github/workflows/: coverage.yml  periodic.yml  regression.yml  release.yml
src/: CMakeLists.txt  svinst-slang.cpp  svvalid.cpp
